<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/view_top"
        layout="@layout/view_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88" />

    <RelativeLayout
        android:id="@+id/ra_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_392"
        android:layout_below="@id/view_top">

        <com.tiangua.zhz.ui.view.views.banner.AutoScrollViewPager
            android:id="@+id/vpager_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_392" />

        <TextView
            android:id="@+id/tv_banner_desc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_60"
            android:layout_alignParentBottom="true"
            android:alpha="100"
            android:background="@drawable/iv_project_translate_bg"
            android:gravity="center"
            android:paddingLeft="@dimen/px_20"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_text_28" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ra_banner"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/la_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/ra_task_1"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_main_item">

                <TextView
                    android:id="@+id/tv_task_1"
                    style="@style/tv_32px_03a9f4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/ra_task_1_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-3dip"
                    android:layout_marginLeft="10dip"
                    android:singleLine="true"
                    android:text="@string/str_task_1" />

                <RelativeLayout
                    android:id="@+id/ra_task_1_anchor"
                    android:layout_width="0dip"
                    android:layout_height="0dip"
                    android:layout_centerVertical="true"></RelativeLayout>

                <TextView
                    android:id="@+id/tv_task_1_scores"
                    style="@style/tv_20px_555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ra_task_1_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:text="@string/str_task_1_desc" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ra_task_2"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_main_item">


                <TextView
                    android:id="@+id/tv_task_2"
                    style="@style/tv_32px_03a9f4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/ra_task_2_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-3dip"
                    android:layout_marginLeft="10dip"
                    android:singleLine="true"
                    android:text="@string/str_task_2" />

                <RelativeLayout
                    android:id="@+id/ra_task_2_anchor"
                    android:layout_width="0dip"
                    android:layout_height="0dip"
                    android:layout_centerVertical="true"></RelativeLayout>

                <TextView
                    android:id="@+id/tv_task_2_scores"
                    style="@style/tv_20px_555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ra_task_2_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:text="@string/str_task_2_desc" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/la_divider1"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/color_e3e3e3"></RelativeLayout>

        <LinearLayout
            android:id="@+id/la_content1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/ra_task_3"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_main_item">

                <TextView
                    android:id="@+id/tv_task_3"
                    style="@style/tv_32px_03a9f4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/ra_task_3_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-3dip"
                    android:layout_marginLeft="10dip"
                    android:singleLine="true"
                    android:text="@string/str_task_3" />

                <RelativeLayout
                    android:id="@+id/ra_task_3_anchor"
                    android:layout_width="0dip"
                    android:layout_height="0dip"
                    android:layout_centerVertical="true"></RelativeLayout>

                <TextView
                    android:id="@+id/tv_task_3_scores"
                    style="@style/tv_20px_555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ra_task_3_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:text="@string/str_task_3_desc" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ra_task_4"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_main_item">

                <TextView
                    android:id="@+id/tv_task_4"
                    style="@style/tv_32px_03a9f4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/ra_task_4_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-3dip"
                    android:layout_marginLeft="10dip"
                    android:singleLine="true"
                    android:text="@string/str_task_4" />

                <RelativeLayout
                    android:id="@+id/ra_task_4_anchor"
                    android:layout_width="0dip"
                    android:layout_height="0dip"
                    android:layout_centerVertical="true"></RelativeLayout>

                <TextView
                    android:id="@+id/tv_task_4_scores"
                    style="@style/tv_20px_555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ra_task_4_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:text="@string/str_task_4_desc" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/la_divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:background="@color/color_e3e3e3"></RelativeLayout>

        <LinearLayout
            android:id="@+id/la_content2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/ra_task_5"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_main_item">


                <TextView
                    android:id="@+id/tv_task_5"
                    style="@style/tv_32px_03a9f4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/ra_task_5_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-3dip"
                    android:layout_marginLeft="10dip"
                    android:singleLine="true"
                    android:text="@string/str_task_5" />

                <RelativeLayout
                    android:id="@+id/ra_task_5_anchor"
                    android:layout_width="0dip"
                    android:layout_height="0dip"
                    android:layout_centerVertical="true"></RelativeLayout>

                <TextView
                    android:id="@+id/tv_task_5_scores"
                    style="@style/tv_20px_555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ra_task_5_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:text="@string/str_task_5_desc" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ra_task_6"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_main_item">

                <TextView
                    android:id="@+id/tv_task_6"
                    style="@style/tv_32px_03a9f4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/ra_task_6_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-3dip"
                    android:layout_marginLeft="10dip"
                    android:singleLine="true"
                    android:text="@string/str_task_6" />

                <RelativeLayout
                    android:id="@+id/ra_task_6_anchor"
                    android:layout_width="0dip"
                    android:layout_height="0dip"
                    android:layout_centerVertical="true"></RelativeLayout>

                <TextView
                    android:id="@+id/tv_task_6_scores"
                    style="@style/tv_20px_555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ra_task_6_anchor"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:text="@string/str_task_6_desc" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0.5dip"
        android:layout_height="match_parent"
        android:layout_below="@id/ra_banner"
        android:layout_centerHorizontal="true"
        android:background="@color/color_e3e3e3"></RelativeLayout>

</RelativeLayout>